<resources>
    <string name="app_name">MoreMovies</string>
    <string name="action_friends_list">Friends</string>
    <string name="action_messages">Messages</string>
    <string name="action_movies_list">Movies</string>
    <string name="action_events_list">Events</string>
    <string name="action_all_movies">All Movies</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
</resources>
