<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UserActivity">
    <item
            android:id="@+id/action_friends_list"
            android:orderInCategory="100"
            android:title="@string/action_friends_list"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_messages"
            android:orderInCategory="100"
            android:title="@string/action_messages"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_movies_list"
            android:orderInCategory="100"
            android:title="@string/action_movies_list"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_events_list"
            android:orderInCategory="100"
            android:title="@string/action_events_list"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_all_movies"
            android:orderInCategory="100"
            android:title="@string/action_all_movies"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_exit"
            android:orderInCategory="100"
            android:title="@string/action_exit"
            app:showAsAction="never"/>
</menu>